deploy/eventhub-named.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  type: ExternalName
  externalName: cookiehub.servicebus.windows.net
  ports:
    - protocol: TCP
      name: "broker"
      port: 9093
      targetPort: 9093
      nodePort: 0
