deploy/eventhub.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
    - protocol: TCP
      name: "broker"
      port: 9093
      targetPort: 9093
      nodePort: 0
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kafka
subsets:
  - addresses:
      - ip: 52.236.186.6
    ports:
      - port: 9093
        name: "broker"
