deploy/postgres-named.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres
spec:
  type: ExternalName
  externalName: cookiepostgres.postgres.database.azure.com
